--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,8 +5,8 @@ h1, h2 {
 #content {
     margin-top: 40px;
 }
-.delete-tweet,
-.delete-tweet:hover {
+.remove-task,
+.remove-task:hover {
     float: right;
     cursor: pointer;
     color: red;
